--- a/About.html
+++ b/About.html
@@ -9,48 +9,53 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>About</title>
+
+    <style>
+        .borderline {
+            height: 1px;
+            width: 1000px;
+            position: fixed;
+            left: 50%;
+            margin-left: -500px;
+        }
+    </style>
 </head>
 
-<nav class="navbar navbar-expand-sm" style="background-color: #9912A9;">
+<nav class="navbar navbar-expand-sm" style="background: linear-gradient(to right, rgba(0,255,255,1), rgba(187,0,255,1));">
     <div class="container-fluid">
         <div class="nav justify-content-center">
             <div class="nav-item">
-                <a class="nav-link text-white" href="Home.html">Home</a>
+                <a class="nav-link text-black" href="Home.html">Home</a>
             </div>
             <div class="nav-item">
-                <a class="nav-link text-white active" href="About.html">About</a>
+                <a class="nav-link text-black active" href="About.html">About</a>
             </div>
         </div>
-        <a class="btn my-sm-1" type="button" style="background-color: #05D7E1;" href="Home.html">Press me!</a>
+        <a class="btn my-sm-1" type="button" style="background-color: rgba(0,255,255,1);" href="Bonus1.html">Press me!</a>
     </div>
 </nav>
 
-<body>
-    <div class="container m-4">
-        <div class="border-bottom border-info">
-            <h1>About Page</h1>
-        </div>
-    </div>
+<body style="background-color: rgba(25,25,25,1); font-family: serif;">
 
-    <div class="card m-2" style="width: 50%;">
-        <h2 class="card-header bg-info bg-opacity-25">Who Am I?</h2>
-        <div class="card-body">
+    <div class="card m-4" style="width: 50%; position: fixed; top: 25%; left: 25%;">
+        <h1 class="card-header" style="background: linear-gradient(to top, rgba(0,50,255,0.25), rgba(50,0,255,0.25));">Who Am I?</h1>
+        <div class="card-body" style="background: rgb(175, 175, 255, 0.15);">
             <h4 class="card-title">Emme Staats</h4>
             <li class="card-text">UMBC Undergraduate Student, Class of 2024</li>
             <li class="card-text">Computer Science Major</li>
             <li class="card-text small">Mathematics Minor</li>
             <li class="card-text small">Japanese Minor</li>
+            <br>
+            <li class="card-text">I'm more of a dog person to be honest but...</li>
+            <li class="card-text small">Click the button in the corner for a surprise!</li>
         </div>
-        <small class="card-footer">Nice to meet you!</small>
+        <small class="card-footer" style="background: linear-gradient(to bottom, rgba(0,50,255,0.25), rgba(50,0,255,0.25));">Nice to meet you!</small>
     </div>
 
-    <h4 class="m-4">
-        Hello!
-    </h4>
+    <div class="borderline" style="top: 75%; background: rgba(100,150,255,0.9); "></div>
 
-    <p class="m-3">
-        My name is Emme Staats and here I'll explain a little about myself.
-    </p>
+    <div class="borderline" style="top: 15%; background: rgba(150,100,255,0.9); "></div>
+
 </body>
 
 </html>
